# gnubg-pypi

./: .github-issue-and-pr.md  .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  credits.c  credits.h  meson.build  patch_gnubg.py  pyproject.toml
.github/: FUNDING.yml  PR_BODY.md
.github/actions/build-wheel/: action.yml
.github/workflows/: branch.yaml  build_and_test.yml  lint.yml  release.yml
docs/: api.rst  concepts.rst  overview.rst  readme.rst  references.rst
examples/: README.md
examples/rest-api/: README.md  test_api.sh  test_rest_api.py
scripts/: build-windows-local.ps1
src/_build_utils/: _version.py
src/gnubgmodule/: .gitignore  __init__.py  bindings.pyi  gnubg_lib.c  gnubgmodule.cpp  gnubgmodule.h  python_stubs.c  python_stubs.h
src/gnubgmodule/examples/: README.md
src/gnubgmodule/examples/rest-api/: README.md  app.py  requirements.txt  smoke_test.py  test_api.sh  test_rest_api.py
tests/: test_board.py  test_data_loading.py  test_gnubg_basic.py  test_gnubg_functions.py  test_phase2_phase3.py  test_version.py
tools/: generate_gnubg_wd.sh
win32_stub/: emmintrin.h  mmintrin.h  skip_mmintrin.h  x86intrin.h
