[build-system]
requires = [
    "meson>=1.7.0",
    "meson-python>=0.15.0",
    "packaging>=24.0"
]
build-backend = "mesonpy"

[project]
name = "gnubg"
version = "1.1.0a5"
description = "Python3 bindings for GNUBG"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Reay", email = "david@stonesandice.com" }
]
license-files = ["LICENSE"]
dependencies = []

[project.urls]
Homepage = "https://www.gnu.org/software/gnubg/"
Documentation = "http://www.gnubg.org/documentation/doku.php?id=gnu_backgammon_faq"
Source = "https://github.com/StonesAndDice/gnubg-pypi"
GNUBG = "https://git.savannah.gnu.org/cgit/gnubg/gnubg.git"
MailingList = "https://lists.gnu.org/mailman/listinfo/gnubg"
Credits = "https://git.savannah.gnu.org/cgit/gnubg.git/tree/credits.sh"

[tool.cibuildwheel.windows]
# Ensure delvewheel is installed before repair
before-build = "pip install delvewheel"
# Run delvewheel directly after building each wheel
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"